Closed
Bug 1162134
Opened 10 years ago
Closed 10 years ago
IonMonkey MIPS: Fix build failure on MIPS (js/src/jit/CodeGenerator.cpp:6740:28: error: ‘obj’ was not declared in this scope)
Categories
(Core :: JavaScript Engine: JIT, defect)
Tracking
()
RESOLVED
FIXED
mozilla41
People
(Reporter: aleksandar.zlicic, Unassigned)
References
Details
Attachments
(1 file, 1 obsolete file)
1.46 KB,
patch
|
bhackett1024
:
review+
|
Details | Diff | Splinter Review |
Build error:
js/src/jit/CodeGenerator.cpp:6740:28: error: ‘obj’ was not declared in this scope
Reporter | ||
Comment 1•10 years ago
|
||
Patch fixes the build on MIPS.
Build failure was caused by a typo (presumably) in attachment 8590332 [details] [diff] [review].
(Bug 1146597)
Attachment #8602207 -
Flags: review?(jdemooij)
Attachment #8602207 -
Flags: review?(bhackett1024)
Comment 2•10 years ago
|
||
Comment on attachment 8602207 [details] [diff] [review]
Bug_1162134.patch
Review of attachment 8602207 [details] [diff] [review]:
-----------------------------------------------------------------
::: js/src/jit/CodeGenerator.cpp
@@ +6736,5 @@
> if (unboxedType == JSVAL_TYPE_MAGIC) {
> Address initLength(elements, ObjectElements::offsetOfInitializedLength());
> masm.branchKey(Assembler::NotEqual, initLength, ToInt32Key(index), &callStub);
> } else {
> + Address initLength(elements, UnboxedArrayObject::offsetOfCapacityIndexAndInitializedLength());
This should be |object|, not |elements|
Attachment #8602207 -
Flags: review?(jdemooij)
Attachment #8602207 -
Flags: review?(bhackett1024)
Attachment #8602207 -
Flags: review+
Reporter | ||
Comment 3•10 years ago
|
||
Attachment #8602207 -
Attachment is obsolete: true
Updated•10 years ago
|
status-firefox40:
--- → affected
Updated•10 years ago
|
Attachment #8602767 -
Flags: review?(bhackett1024)
Updated•10 years ago
|
Attachment #8602767 -
Flags: review?(bhackett1024) → review+
Updated•10 years ago
|
Keywords: checkin-needed
Keywords: checkin-needed
Status: UNCONFIRMED → RESOLVED
Closed: 10 years ago
status-firefox41:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
You need to log in
before you can comment on or make changes to this bug.
Description
•